# Python-Project-Template

./: .gitignore  .pre-commit-config.yaml  .versionrc.json  CHANGELOG.md  CLAUDE.md  README.md  README.zh.md  config.py  config.yaml  makefile  mkdocs.en.yml  mkdocs.yml  mkdocs.zh.yml  playground.ipynb  pyproject.toml  setup.py  standard-version-updater.js  tox.ini
.claude/: recommended-skills.md  settings.json
.claude/skills/commit/: SKILL.md
.claude/skills/quality-check/: SKILL.md
.claude/skills/setup-project/: SKILL.md
.claude/skills/update-memory-bank/: SKILL.md
.claude/skills/upgrade-project/: SKILL.md
.cursor/: .cursorignore
.cursor/cache/: architecture.md  progress.md  tech-stack.md
.cursor/rules/: cursorrules.mdc
.github/workflows/: docs.yml  release-please.yml
.obsidian/: community-plugins.json  daily-notes.json  templates.json  workspace.json
.obsidian/plugins/obsidian-memos/: data.json  main.js  manifest.json
.obsidian/plugins/obsidian-style-settings/: data.json
cache/: tech-stack.md
changelog.d/: 2024-06-15.md
config/: config.yaml
config/ds/: linux.yaml  mac.yaml  win.yaml
docs/: index.md
docs/doc/: configuration.md  deployment.md  development.md  quick-start.md  tools.md
docs/en/: index.md
docs/en/doc/: configuration.md  deployment.md  development.md  quick-start.md  tools.md
docs/zh/: index.md
docs/zh/doc/: configuration.md  deployment.md  development.md  quick-start.md  tools.md
example/: README.md  config.py
memory-bank/: architecture.md  model-design.md  progress.md  tech-stack.md
mksci/: __init__.py  __main__.py  setup.py
mksci/commands/: fresh.py  init.py  new.py
mksci/configs/: contributors.yaml  docs.yaml  introduction.yaml  links.yaml  structure.yaml
mksci/templates/: __init__.py
mksci/templates/docs/: repo_readme.md
scripts/: __init__.py  configure_project.py
scripts/locales/en/LC_MESSAGES/: messages.po
scripts/locales/zh/LC_MESSAGES/: messages.po
src/: __init__.py
src/api/: __init__.py
src/core/: __init__.py
tests/: __init__.py  conftest.py  helper.py  test_configure_project.py
