[tool.poetry]
name = "songshgeo"
version = "0.1.0"
description = "Template"
authors = ["SongshGeo <songshgeo@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
hydra-core = ">=1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
allure-pytest = "^2.13.0"
ipykernel = "^6.21.2"
jupyterlab = ">4.0,<5.0"
jupyterlab-execute-time = "^2.3.1"
flake8 = "^6.0.0"
isort = "^5.12.0"
nbstripout = "^0.6.1"
pydocstyle = "^6.3.0"
pre-commit-hooks = "^4.4.0"
snakeviz = "^2.2.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mike = "^2.0.0"
mkdocs-material = "^9.1.6"
mkdocs-git-revision-date-localized-plugin = "^1.2.0"
mkdocs-minify-plugin = "^0.6.4"
mkdocs-redirects = "^1.2.0"
mkdocs-awesome-pages-plugin = "^2.8.0"
mkdocs-git-authors-plugin = "^0.7.0"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}
mkdocs-bibtex = "^2.8.16"
mkdocs-macros-plugin = "^0.7.0"
mkdocs-jupyter = "^0.24.1"
mkdocs-callouts = "^1.9.0"
mkdocs-glightbox = "^0.3.2"
mkdocs-ezlinks-plugin = "^0.1.14"
mkdocs-exclude = "^1.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
